--- a/plugins/plugin-editor/web/css/theme-alignment.css
+++ b/plugins/plugin-editor/web/css/theme-alignment.css
@@ -116,17 +116,24 @@
 }
 
 /* hover/tooltip */
-[kui-theme-style] .monaco-editor-overlaymessage .message {
-  background-color: var(--color-base0C);
-  border-color: var(--color-base0C);
-  color: var(--color-base01);
+[kui-theme-style] .monaco-editor .monaco-editor-overlaymessage {
 }
-.monaco-editor-overlaymessage .anchor {
-  border-top-color: var(--color-base0C);
+[kui-theme-style] .monaco-editor .monaco-editor-overlaymessage .message {
+  background-color: var(--color-base05);
+  border-color: transparent;
+  color: var(--color-base01);
+  padding: 0.75em;
+  font-size: 0.875em;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+[kui-theme-style] .monaco-editor .monaco-editor-overlaymessage .anchor {
+  border-top-color: var(--color-base05);
 }
 
 /* bracket matches */
-.cdr.bracket-match {
+[kui-theme-style] .cdr.bracket-match {
   border-color: rgba(255, 255, 255, 0.25);
   background-color: transparent;
 }
